tests/fixtures/semantic/invalid/coalesce-non-optional.ck
module app.bad

fn f(name: String) -> String {
  return name ?? "fallback"
}
